Added new projects to Portfolio

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
-            <li>Boostrap</li>
+            <li>Bootstrap</li>
             <li>Responsive features</li>
             <li>GitHub</li>
-            <li>Netlify (for hosting the projects)</li>
+            <li>Netlify (for hosting projects)</li>
           </ul>
         </div>
            <div class="navigation-links homepagebuttoms">
