--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
             </div>
             <div class="col-sm-5">
              <p class="mt-sm-5">
-                One of my favourite projects.😊 In this project I've implemented API and performed Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
+                One of my favourite projects.😊 In this project I've implemented API and performed Weather forecast for a week. There is an ability to convert the temperature from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
               <div class="navigation-links mb-sm-3">
@@ -152,7 +152,64 @@
     </div>
       </div>
     </div>
+     <div class="container mt-sm-5">
+          <div class="row">
+            <div class="col-sm-7">
+             <h3 class="mb-sm-4">
+         <img src="Images/icons8-national-park-100.png" alt="weather react" title="React Weather icon" class="icons"/> React Weather Application </h3>
+         <img
+                src="Images/react_weather_app_pic.png"
+                alt="React_Weather"
+                title="React Weather App"
+                class="img-fluid rounded-3 shadow-sm border-3" width="900px"
+              />
+            </div>
+            <div class="col-sm-5">
+             <p class="mt-sm-5">
+                The project was built with React😊. Fully functional application, the ability to change temperature units, weekly forecast and current time. The application includes different component that interact with each other. 
+              </p>
+              <div class="navigation-links mb-sm-3">
+                <a
+                  href="https://funny-platypus-b5bf89.netlify.app/"
+                  class="primary-link"
+                  title="React Weather app"
+                  >See more</a><a
+                  href="portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact</a>
+              </div>
+            </div>
     </div>   
+     <div class="container mt-sm-4">
+        <div class="row">
+         <div class="col-sm-6">
+             <h3 class="mb-sm-4">  
+              <img src="Images/icons8-books-100.png" alt="Dictionary app icon" title="Dictionary app icon" class="icons"/>
+              React Dictionary Application </h3>
+          <p>I've built React Dictionary Application using 2 API and other knowledge about CSS, HTML greeds and responsiveness. </p>
+          <p> Here you can find all elements that are ussually found in dictionaries: phonetics, description, part of speech and picture.</p> 
+          <p>Follow the link and try to find a word.😉 </p>
+          </div> 
+             <div class="col-sm-6">
+            <img src="Images/Dictionary app.png" alt="Dictionary app pic" title="Dictionary app" class="img-fluid rounded-3 shadow-sm border-3"/>
+            <div class="navigation-links mb-sm-2">
+                <a
+                  href="https://sparkling-daifuku-ed4542.netlify.app/"
+                  class="primary-link"
+                  title="Photographer's page"
+                  >See more</a>
+                <a
+                  href="portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact</a>
+              </div>
+             </div>
+      </div>
+    </div>
+      </div>
+    </div>
     <footer class="d-none d-md-block">
        <div class="container contact-box d-flex justify-content-between">
         <div class="container">
