--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
           <img src="Images/icons8-world-map-100.png" alt="travelling pic" class="icons" title="Travelling icon"/>
           Travelling page</h3>
             <p>
-                This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
+                This is my first project where I've used not only HTML and CSS but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
                 The interaction with a website user is available here.  To see the results push the button
                 below.
@@ -129,7 +129,7 @@
              <h3 class="mb-sm-4">  
               <img src="Images/icons8-camera-100.png" alt="Photographer's page icon" title="Photographer's page icon" class="icons"/>
               Photographer's page </h3>
-          <p>I also like to take photos, especially Architecture. So on this page you can see some examples of my photography works. </p>
+          <p>I also like to take photos, especially an Architecture. So on this page you can see some examples of my photography works. </p>
           <p> As a Front-end developer I've perfomed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
           <p>Welcome to my page 😉 </p>
           </div> 
@@ -187,7 +187,7 @@
              <h3 class="mb-sm-4">  
               <img src="Images/icons8-books-100.png" alt="Dictionary app icon" title="Dictionary app icon" class="icons"/>
               React Dictionary Application </h3>
-          <p>I've built React Dictionary Application using 2 API and other knowledge about CSS, HTML greeds and responsiveness. </p>
+          <p>I've built React Dictionary Application using 2 API and other knowledge about CSS, HTML, greeds and responsiveness. </p>
           <p> Here you can find all elements that are ussually found in dictionaries: phonetics, description, part of speech and picture.</p> 
           <p>Follow the link and try to find a word.😉 </p>
           </div> 
