--- a/index.html
+++ b/index.html
@@ -82,11 +82,16 @@
           <ul>
             <li>HTML</li>
             <li>CSS</li>
-            <li>JavaScript</li>
+            <li>JavaScript (ES6)</li>
+            <li>Google Fonts</li>
             <li>Bootstrap</li>
-            <li>Responsive features</li>
+            <li>Multiple Page Hosting </li>
+            <li>Responsive features (+ Media Queries)</li>
+            <li>Flexbox</li>
+            <li>SEO</li>
             <li>GitHub</li>
             <li>Netlify (for hosting projects)</li>
+            <li>React</li>
           </ul>
         </div>
            <div class="navigation-links homepagebuttoms">
