--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
           <img src="Images/icons8-world-map-100.png" alt="travelling pic" class="icons" title="Travelling icon"/>
           Travelling page</h3>
             <p>
-                This is my first project where I've used not only HTML and CSS but JavaScript also.👩🏻‍💻 It was
+                This is my first project where I've used not only HTML, CSS and JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
                 The interaction with a website user is available here.  To see the results push the button
                 below.
