--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
               <img src="Images/icons8-camera-100.png" alt="Photographer's page icon" title="Photographer's page icon" class="icons"/>
               Photographer's page </h3>
           <p>I also like to take photos, especially an Architecture. So on this page you can see some examples of my photography works. </p>
-          <p> As a Front-end developer I've perfomed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
+          <p> As a Front-end developer I've performed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
           <p>Welcome to my page 😉 </p>
           </div> 
              <div class="col-sm-6">
