Changed descriptions of projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
             </div>
             <div class="col-sm-5">
              <p class="mt-sm-5">
-                The project was built with React😊. Fully functional application, the ability to change temperature units, weekly forecast and current time. The application includes different component that interact with each other. 
+                The project was built with React😊. Fully functional application with the ability to change temperature units, weekly forecast and current time. The application includes different components that interact with each other. 
               </p>
               <div class="navigation-links mb-sm-3">
                 <a
@@ -187,8 +187,8 @@
              <h3 class="mb-sm-4">  
               <img src="Images/icons8-books-100.png" alt="Dictionary app icon" title="Dictionary app icon" class="icons"/>
               React Dictionary Application </h3>
-          <p>I've built React Dictionary Application using 2 API and other knowledge about CSS, HTML, greeds and responsiveness. </p>
-          <p> Here you can find all elements that are ussually found in dictionaries: phonetics, description, part of speech and picture.</p> 
+          <p>I've built React Dictionary Application using 2 APIs and other knowledge about CSS, HTML, greeds and responsiveness. </p>
+          <p> Here you can find all elements that are usually found in dictionaries: phonetics, description, part of speech and picture.</p> 
           <p>Follow the link and try to find a word.😉 </p>
           </div> 
              <div class="col-sm-6">
